--- a/nazeerApp/src/index.html
+++ b/nazeerApp/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NazeerApp</title>
+  <title>ikramapp</title>
   <base href="/">
 
-  <meta name="viewportaha" content="width=device-width, initial-scale=1">
+  <meta name="viewportikram" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
